--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^8.9.1"
+    "express-session": "^1.18.1",
+    "googleapis": "^144.0.0",
+    "mongoose": "^8.9.1",
+    "node-cron": "^3.0.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0"
   },
   "devDependencies": {
     "dotenv": "^16.4.7",
